--- a/manifest/mongo-deployment.yml
+++ b/manifest/mongo-deployment.yml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: mongodb
   namespace: mern-stack
 spec:
+  serviceName: mongodb
   replicas: 1
   selector:
     matchLabels:
@@ -18,16 +19,42 @@ spec:
           image: mongo:latest
           ports:
             - containerPort: 27017
+          env:
+            - name: MONGO_INITDB_ROOT_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-root-username
+            - name: MONGO_INITDB_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-root-password
+          volumeMounts:
+            - name: mongodb-data
+              mountPath: /data/db
+  volumeClaimTemplates:
+    - metadata:
+        name: mongodb-data
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 1Gi
+
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: mongodb
+  namespace: mern-stack
 spec:
-  selector:
-    app: mongodb
   ports:
     - protocol: TCP
       port: 27017
       targetPort: 27017
+  selector:
+    app: mongodb
   type: ClusterIP
+
