--- a/manifest/mongo-secret.yml
+++ b/manifest/mongo-secret.yml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mongodb-secret
+  namespace: mern-stack
 type: Opaque
 data:
-  MONGODB_URI: bW9uZ29kYjovL21vbmdvZDovM21lcm4tZGI=  # 'mongodb://mongodb:27017/mern-db' base64 encode
+  mongodb-root-username: bW9uZ29hZG1pbg== # Base64 encoded value of "mongoadmin"
+  mongodb-root-password: cGFzc3dvcmQxMjM= # Base64 encoded value of "password123"
