--- a/manifest/backend-deployment.yml
+++ b/manifest/backend-deployment.yml
@@ -14,14 +14,32 @@ spec:
         app: backend
     spec:
       containers:
-      - name: backend
-        image: bbw0r1d/mern-backend:latest
-        imagePullPolicy: Always 
+        - name: backend
+          image: bbw0r1d/mern-backend:latest
+          env:
+            - name: MONGO_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-root-username
+            - name: MONGO_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mongodb-secret
+                  key: mongodb-root-password
+            - name: MONGO_DBNAME
+              value: "mern-db"
+            - name: MONGO_HOST
+              value: "mongodb"
+            - name: MONGO_PORT
+              value: "27017"
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: backend
+  namespace: mern-stack
 spec:
   selector:
     app: backend
