--- a/.github/workflows/frontend-cı.yml
+++ b/.github/workflows/frontend-cı.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main 
-      
+    paths:
+      - 'frontend/**'  # Sadece frontend dizinindeki değişikliklerde tetiklenir 
+
 jobs:
   CI-backend:
     name: CI for frontend
