--- a/manifest/backend-deployment.yml
+++ b/manifest/backend-deployment.yml
@@ -21,7 +21,7 @@ spec:
             - name: MONGO_URI
               valueFrom:
                 secretKeyRef:
-                  name: mongodb-credentials
+                  name: mongodb-secret
                   key: mongodb-uri
 
 ---
