--- a/manifest/mongo-secret.yml
+++ b/manifest/mongo-secret.yml
@@ -5,6 +5,6 @@ metadata:
   namespace: mern-stack
 type: Opaque
 data:
-  mongodb-root-username: bW9uZ29hZG1pbg== # Base64 encoded value of "mongoadmin"
-  mongodb-root-password: cGFzc3dvcmQxMjM= # Base64 encoded value of "password123"
-  mongodb-uri: bW9uZ29kYjovL21vbmdvYWRtaW46cGFzc3dvcmQxMjNAbW9uZ29kYi0wOjI3MDE3L21lcm4tZGI/YXV0aFNvdXJjZT1hZG1pbg== # MongoDB URI'yi Base64 ile şifreleyin
+  mongodb-root-username: bW9uZ29hZG1pbg==  # Base64 encoded "mongoadmin"
+  mongodb-root-password: cGFzc3dvcmQxMjM=  # Base64 encoded "password123"
+  mongodb-uri: bW9uZ29kYjovL21vbmdvYWRtaW46cGFzc3dvcmQxMjM6bW9uZ29kYi0wOjI3MDE3L21lcm4tZGI/YXV0aFNvdXJjZT1hZG1pbg==  # Base64 encoded "mongodb://mongoadmin:password123@mongodb-0:27017/mern-db?authSource=admin"
