--- a/database/mongodb-secret.yml
+++ b/database/mongodb-secret.yml
@@ -1,9 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mongo-secret
-  namespace: mern-stack
-type: opaque
+  name: mongodb-secret
+type: Opaque
 data:
-  mongo-user: bW9uZ291c2Vy
-  mongo-password: bW9uZ29wYXNzd29yZA==
+  MONGO_INITDB_ROOT_USERNAME: cm9vdA==  # 'root' kullanıcı adı (base64 encoded)
+  MONGO_INITDB_ROOT_PASSWORD: ZXhhbXBsZQ==  # 'example' şifresi (base64 encoded)
