--- a/manifest/frontend-deployment.yml
+++ b/manifest/frontend-deployment.yml
@@ -1,19 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
-  namespace: mern-stack
+  name: mern-frontend
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: frontend
+      app: mern-frontend
   template:
     metadata:
       labels:
-        app: frontend
+        app: mern-frontend
     spec:
       containers:
-      - name: frontend
-        image: bbw0r1d/mern-frontend:latest
-        imagePullPolicy: Always
+      - name: mern-frontend
+        image: us-central1-docker.pkg.dev/ibbtech/mern-stack/mern-frontend:v1.0.0
+        ports:
+        - containerPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mern-frontend-service
+spec:
+  selector:
+    app: mern-frontend
+  ports:
+  - protocol: TCP
+    port: 3000
+    targetPort: 3000
+  type: LoadBalancer
