--- a/manifest/mongo-config.yml
+++ b/manifest/mongo-config.yml
@@ -1,11 +1,25 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: mongo-config
-  namespace: mern-stack
+  name: mongodb-config
+  labels:
+    app: mongodb
 data:
-  mongo-url: "mongodb://mongouser:mongopassword@mongodb:27017"
-  mongo-user: bW9uZ291c2Vy  # base64 encode edilmiş kullanıcı adı (mongouser)
-  mongo-password: bW9uZ29wYXNzd29yZA==  # base64 encode edilmiş şifre (mongopassword)
-
-  
+  # MongoDB'nin yapılandırma dosyasını burada tanımlayabiliriz
+  mongod.conf: |
+    # MongoDB yapılandırma dosyası
+    storage:
+      dbPath: /data/db
+      journal:
+        enabled: true
+    systemLog:
+      destination: file
+      path: /var/log/mongodb/mongod.log
+      logAppend: true
+    net:
+      bindIp: 0.0.0.0  # Dışarıdan bağlantılara izin verir
+      port: 27017
+    security:
+      authorization: "enabled"  # Kullanıcı doğrulaması aktif
+    replication:
+      replSetName: rs0  # Replication Set (isteğe bağlı)
