--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -1,4 +1,4 @@
-name: Deploy to GKE
+name: Deploy to GCP GKE
 
 on:
   push:
@@ -23,11 +23,11 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     # GCloud CLI Kurulumu ve Kimlik Doğrulama
     - id: 'auth'
-      uses: 'google-github-actions/auth@v0'
+      uses: 'google-github-actions/auth@v2'
       with:
         credentials_json: '${{ secrets.GK_SA_KEY }}'
 
