--- a/.github/workflows/deploy-gcp.yml
+++ b/.github/workflows/deploy-gcp.yml
@@ -26,16 +26,17 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    # # GCloud CLI Kurulumu ve Kimlik Doğrulama
-    # - id: 'auth'
-    #   uses: 'google-github-actions/auth@v2'
-    #   with:
-    #     credentials_json: '${{ secrets.GK_SA_KEY }}'  # GitHub Secrets'ten alınan Service Account Key JSON dosyası
+    # GCloud CLI Kurulumu ve Kimlik Doğrulama
+    - id: 'auth'
+      uses: 'google-github-actions/auth@v2'
+      with:
+        credentials_json: '${{ secrets.GK_SA_KEY }}'  # GitHub Secrets'ten alınan Service Account Key JSON dosyası
 
-    # Docker için kimlik doğrulama
+    # Docker için kimlik doğrulama (gcloud auth print-access-token kullanmadan)
     - name: Configure Docker Authentication
       run: |-
-        docker login -u oauth2accesstoken -p "$(gcloud auth print-access-token)" https://$GAR_ZONE-docker.pkg.dev
+        ACCESS_TOKEN=$(gcloud auth application-default print-access-token)
+        echo $ACCESS_TOKEN | docker login -u oauth2accesstoken --password-stdin https://$GAR_ZONE-docker.pkg.dev
 
     # GKE Cluster Erişim Bilgilerini Alma
     - name: Configure GKE Credentials
